# spotify-stop-ai

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt  test_installation.py
examples/: com.spotify-stop-ai.guard.plist  decision_record.json  logged_play.json
prompts/: classify_artist.txt
src/spotify_stop_ai/: __init__.py  api.py  classifier.py  database.py  main.py  monitor.py  ollama_client.py  spotify_client.py  web_ui.py
src/spotify_stop_ai/classifiers/: __init__.py  lastfm.py  musicbrainz.py  wikidata.py
src/spotify_stop_ai/templates/: artist.html  base.html  decisions.html  index.html  plays.html
